Fix issue #102, reduce spacing on values headers by 50%

--- a/data/css/all-aboard.css
+++ b/data/css/all-aboard.css
@@ -69,7 +69,7 @@ a:focus {
 }
 
 .sidebar-content.values header {
-    margin-bottom: 40px;
+    padding: 10px 0 20px;
 }
 
 .sidebar-content.values main,
